--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -142,7 +142,7 @@
         -->
 
         <!-- LAYER NR. 3 -->
-        <a href="https://wrapbootstrap.com/theme/kidz-multipurpose-children-kids-theme-WB059350N"
+        <a href="{% url 'about' %}"
           class="tp-caption tp-resizeme slide-layer-3 btn btn-white"
           data-frames='[{
           "delay":2200,"speed":1300,"frame":"500","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},
@@ -219,7 +219,7 @@
 
 <section class="py-9 bg-parallax" style="background-image: url({% static 'assets/img/imagen_bottom.jpg' %});">
     <div class="container">
-        <div class="wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+        <div class="" style="visibility: visible; animation-name: fadeInUp;">
           <div class="section-title justify-content-center">
             <h2 class="text-white text-center breadcrumb-title">Utiliza criptomonedas para aprender y
                 gana compartiendo conocimiento.</h2>
