--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -19,7 +19,6 @@
 
         <!-- LAYER NR. 1 -->
         <div class="tp-caption tp-resizeme font-dosis font-weight-bold"
-        <div class="tp-caption tp-resizeme font-dosis font-weight-bold"
           data-frames='[{
             "delay":1600,"speed":1000,"frame":"500","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},
             {"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -90,7 +89,7 @@
 
         <!-- SLIDE 2  -->
         <li data-transition="fade">
-            <img src="{% static 'assets/img/parallax_a.png' %}" alt="Sky" class="rev-slidebg">
+            <img src="{% static 'assets/img/parallax_a.jpg' %}" alt="Sky" class="rev-slidebg">
         <!-- LAYERS-->
 
         <!-- LAYER NR. 1 -->
