--- a/templates/profiles/content.html
+++ b/templates/profiles/content.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
     <div class="main-wrapper teachers-details">
@@ -7,7 +8,7 @@
 <!-- ====================================
 ———	BREADCRUMB
 ===================================== -->
-<section class="breadcrumb-bg" style="background-image: url(https://images.squarespace-cdn.com/content/v1/5b6cc487620b85a4400b78a1/1538763794373-QZJV5OXM00OUQXPUZ2S7/ke17ZwdGBToddI8pDm48kEsYCv8siTIZGDHdFeal4UoUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYxCRW4BPu10St3TBAUQYVKcr0gDI7dDrQdpstTwgN7SyerQb7v7DMsLFGNUDBmtpvryubs1SbPLUqRBWzDZP1g3/blockchainis.jpg); ">
+<section class="breadcrumb-bg" style="background-image: url({% static 'assets/img/parallax_blockchain.jpg' %}); ">
 <div class="container">
   <div class="breadcrumb-holder">
     <div>
