actualizar guion medios - censura

--- a/static/assets/css/kidz.css
+++ b/static/assets/css/kidz.css
@@ -17354,3 +17354,7 @@ html {
 /*  background-color: red;*/
   text-align: right;
 }
+
+.transparent_background{
+  background-color: rgba(60, 60, 60, 0.5);
+}
