--- a/templates/courses/about.html
+++ b/templates/courses/about.html
@@ -5,15 +5,79 @@
   <!-- ====================================
   ———	BREADCRUMB
   ===================================== -->
-  <section class="breadcrumb-bg" style="background-image: url({% static 'assets/img/parallax_c.png' %}); ">
-    <div class="container">
-      <div class="breadcrumb-holder">
-        <div>
-            <h1 class="breadcrumb-title">¿Qué es Academia Blockchain?</h1>
-        </div>
-      </div>
+<section class="breadcrumb-bg" style="background-image: url({% static 'assets/img/cubo1.jpg' %}); ">
+<div class="container">
+  <div class="breadcrumb-holder">
+    <div>
+        <h1 class="breadcrumb-title">¿Qué es Academia Blockchain?</h1>
     </div>
-  </section>
+  </div>
+</div>
+</section>
+
+
+<section class="py-7 py-md-10">
+	<div class="container">
+
+		<div class="row">
+            <div class="col-sm-10 col-xs-10">
+              <div class="section-title mb-4">
+                <h2 class="text-danger pl-0">Educación Libre</h2>
+              </div>
+              <p class="text-muted font-size-20 mb-4">
+                  Academia Blockchain es una plataforma en la que podrás compartir conocimiento a cambio de criptomonedas. Además, podrás ganar criptomonedas aprendiendo y utilizar la blockchain para guardar tus certificados de educación. La comunidad de Academia Blockchain reconoce la necesidad de descentralizar el conocimiento. Queremos cambiar la forma en la que los alumnos conectan con los profesores, maestros, científicos, filósofos y expertos de todo tipo.
+              </p>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+<!-- ====================================
+———	BREADCRUMB
+===================================== -->
+<section class="breadcrumb-bg" style="background-image: url({% static 'assets/img/cubo2.png' %}); ">
+<div class="container">
+  <div class="breadcrumb-holder">
+    <div class="transparent_background">
+        <h3 class="text-white">Las criptomonedas son una revolución en el mundo digital: Nació la escacez en el Internet.
+          En Academia Blockchain abrazamos el cambio y entendemos cómo aprovechar esta tecnología. </h3>
+    </div>
+  </div>
+</div>
+</section>
+
+
+<!-- ====================================
+———	ABOUT MEDIA
+===================================== -->
+<section class="py-7 py-md-10">
+	<div class="container">
+
+		<div class="row">
+            <div class="col-sm-10 col-xs-10">
+                <p class="text-muted font-size-20 mb-4">
+                  Puedes encontrar un profesor y pagarle directamente a él. En otros sitios educativos, la plataforma se queda hasta con el 40% de los ingresos del profesor. Academia Blockchain no es un intermediario en el pago y el 100% va al profesor / organizador del evento. El profesor puede elegir dar la clase utilizando su aplicación de preferencia (zoom, hangouts, whatsapp, jitsi) y el curso no se graba en nuestros servidores. También, el profesor puede elegir sus criptomonedas favoritas para aceptar los pagos.  Academia Blockchain no actúa como escrow y el pago no es guardado (básicamente, facilitamos una relación directa entre alumno - profesor).
+                </p>
+                <p class="text-info font-size-20 mb-4">Academia Blockchain sencillamente lista una oferta de Cursos / Eventos / Exámenes que puedes pagar usando tus criptomonedas. Queremos que conectes con gente interesante. </p>
+            </div>
+		</div>
+	</div>
+</section>
+
+<!-- ====================================
+———	BREADCRUMB
+===================================== -->
+<section class="breadcrumb-bg" style="background-image: url({% static 'assets/img/cubo3.jpg' %}); ">
+<div class="container">
+  <div class="breadcrumb-holder">
+    <div class="transparent_background">
+        <h3 class="text-white">Las criptomonedas permiten realizar pagos punto-a-punto, o P2P. </h3>
+    </div>
+  </div>
+</div>
+</section>
+
 
 <!-- ====================================
 ———	ABOUT MEDIA
@@ -21,39 +85,17 @@
 <section class="py-7 py-md-10">
 	<div class="container">
 		<div class="row">
-            <div class="col-sm-2 col-xs-2">
-            </div>
+			<div class="col-sm-6 col-xs-12 order-md-1">
+				<div class="image mb-4 mb-md-0">
+					<img class="img-fluid rounded" src="{% static 'assets/img/parallax_b.png' %}" alt="features-img1.jpg">
+				</div>
+			</div>
 
-            <div class="col-sm-10 col-xs-10">
+			<div class="col-sm-6 col-xs-12">
 				<div class="">
                   <div class="section-title mb-4">
-                    <h2 class="text-danger pl-0">Educación P2P</h2>
                   </div>
-                  <p class="text-dark font-size-15 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <p class="text-danger font-size-15 mb-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-
-                  <ul class="list-unstyled mb-5">
-                    <li class="d-flex align-items-baseline text-muted mb-2">
-                                    <i class="fa fa-check mr-2" aria-hidden="true"></i>
-                                    Vestibulum iaculis quam ac libero volutpat placerat.
-                                </li>
-                    <li class="d-flex align-items-baseline text-muted mb-2">
-                                    <i class="fa fa-check mr-2" aria-hidden="true"></i>
-                                    Phasellus sit amet risus fringilla, aliquet lacus vel, suscipit lorem.
-                                </li>
-                    <li class="d-flex align-items-baseline text-muted mb-2">
-                                    <i class="fa fa-check mr-2" aria-hidden="true"></i>
-                                    Etiam suscipit velit et tellus bibendum interdum.
-                    </li>
-                    <li class="d-flex align-items-baseline text-muted mb-2">
-                      <i class="fa fa-check mr-2" aria-hidden="true"></i>
-                      Vestibulum iaculis quam ac libero volutpat placerat.
-                    </li>
-                    <li class="d-flex align-items-baseline text-muted mb-2">
-                      <i class="fa fa-check mr-2" aria-hidden="true"></i>
-                      Etiam suscipit velit et tellus bibendum interdum.
-                    </li>
-                  </ul>
+                    <h2 class="text-warning pl-0">En la medida en la que participes en Academia Blockchain, podrás recibir certificados, calificar Cursos / Eventos / Exámenes y comentar contenido. Al hacerlo recibirás certificados y puntos canjeables por <strong>ACBC</strong>, el token de nuestra Organización Autónoma Descentralizada (DAO).</h2>
                 </div>
 			</div>
 		</div>
