--- a/templates/courses/about.html
+++ b/templates/courses/about.html
@@ -25,7 +25,8 @@
                 <h2 class="text-danger pl-0">Educación Libre</h2>
               </div>
               <p class="text-muted font-size-20 mb-4">
-                  Academia Blockchain es una plataforma en la que podrás compartir conocimiento a cambio de criptomonedas. Además, podrás ganar criptomonedas aprendiendo y utilizar la blockchain para guardar tus certificados de educación. La comunidad de Academia Blockchain reconoce la necesidad de descentralizar el conocimiento. Queremos cambiar la forma en la que los alumnos conectan con los profesores, maestros, científicos, filósofos y expertos de todo tipo.
+                  Academia Blockchain es una plataforma en la que podrás compartir conocimiento a cambio de criptomonedas. Además, podrás ganar criptomonedas aprendiendo y utilizar la blockchain para guardar tus certificados de educación. La comunidad de Academia Blockchain reconoce la
+                  <a href="{% url 'descentralize_education' %}">necesidad de descentralizar el conocimiento</a>. Queremos cambiar la forma en la que los alumnos conectan con los profesores, maestros, científicos, filósofos y expertos de todo tipo.
               </p>
 			</div>
 		</div>
@@ -98,6 +99,7 @@
                     <h2 class="text-warning pl-0">En la medida en la que participes en Academia Blockchain, podrás recibir certificados, calificar Cursos / Eventos / Exámenes y comentar contenido. Al hacerlo recibirás certificados y puntos canjeables por <strong>ACBC</strong>, el token de nuestra Organización Autónoma Descentralizada (DAO).</h2>
                 </div>
 			</div>
+
 		</div>
 	</div>
 </section>
