--- a/templates/courses/descentralize_education.html
+++ b/templates/courses/descentralize_education.html
@@ -132,7 +132,7 @@
 <section class="breadcrumb-bg" style="background-image: url({% static 'assets/img/cadena1.jpg' %}); ">
     <div class="container">
         <div class="transparent_background">
-            <h3 class="text-white text-center">Únete.</h3>
+            <h3 class="text-white text-center"><br><br><br><br> <strong>Únete</strong> <br><br><br><br></h3>
         </div>
     </div>
 </section>
@@ -150,8 +150,10 @@
                   <h5 class="card-title">Somos Idealistas</h5>
                   <h3 class="text-muted pl-0"> Como puedes notar, el lenguaje que utilizamos en esta página es profundamente idealista: creemos que la tecnología puede cambiar el mundo para bien.
                     Si el proyecto resuena contigo y quieres ser parte, puedes hacerlo comprando ACBC DAO tokens, donando directamente a nuestras direcciones cripto o participando en esta plataforma. ¡¡Un abrazo!!
+                      <br><br>
                   </h3>
                   <a href="" class="btn btn-success">Apoyar a Academia Blockchain</a>
+                    <br>
                 </div>
               </div>
             </div>
