--- a/templates/courses/event_detail.html
+++ b/templates/courses/event_detail.html
@@ -84,7 +84,7 @@
                             <button id="remove_bookmark" type="button" class="btn btn-warning mb-2"><i class="fa fa-star-o"></i> Ya no me interesa</button>
                         </div>
                         <div id="event_bookmark_div" class="text-right">
-                            <button id="event_bookmark" type="button" class="btn btn-info mb-2"><i class="fa fa-star"></i> Me Interesa - Guardar</button>
+                            <button id="event_bookmark" type="button" class="btn btn-info mb-2"><i class="fa fa-star"></i> Me Interesa</button>
                         </div>
 
                         {% if user_certificate_request %}
@@ -92,7 +92,7 @@
                         {% else %}
                             <div id="request_certificate_div" class="text-right">
                                 <button id="request_certificate" data-id="{{ event.id }}" type="button" class="btn btn-success mb-2">
-                                    <i class="fa fa-certificate"></i> Solicitar Certificado!
+                                    <i class="fa fa-certificate"></i> Solicitar Certificado
                                 </button>
                             </div>
                         {% endif %}
