--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -59,7 +59,7 @@
           data-type="text"
           data-whitespace="normal"
           style="z-index: 10;">
-            En Academia Blockchain puedes encontrar eventos, exámenes y cursos sin comisiones.
+            En Academia Blockchain puedes encontrar eventos, cursos y exámenes.
         </div>
 
         <!-- LAYER NR. 3
@@ -220,8 +220,8 @@
     <div class="container">
         <div class="" style="visibility: visible; animation-name: fadeInUp;">
           <div class="section-title justify-content-center">
-            <h2 class="text-white text-center breadcrumb-title">Utiliza criptomonedas para aprender y
-                gana compartiendo conocimiento.</h2>
+            <h2 class="text-white text-center breadcrumb-title">UTILIZA CRIPTOMONEDAS PARA APRENDER Y
+                GANA COMPARTIENDO CONOCIMIENTO</h2>
           </div>
             <div class="text-sm-right">
               <button type="submit" class="btn btn-warning text-uppercase"
