--- a/templates/profiles/profile_edit_contactm.html
+++ b/templates/profiles/profile_edit_contactm.html
@@ -74,7 +74,7 @@
                         <input name="contactm_name" id="modal_contactm_name" type="text" class="form-control"
                                placeholder="Nombre">
                         <input name="contactm_url" id="modal_contactm_url" type="text" class="form-control"
-                               placeholder="URL / EMAIL / # ">
+                               placeholder="URL / EMAIL / # / @ ">
                       </div>
                       <input name="contactm_description" id="modal_contactm_description" type="text" class="form-control"
                                 placeholder="Ej. Envíame un mensaje, estoy conectado durante las tardes" value="">
