--- a/templates/profiles/profile_edit_cryptos.html
+++ b/templates/profiles/profile_edit_cryptos.html
@@ -18,7 +18,7 @@
     </div>
 
         <div class="row">
-            <form method="post" id = "crypto_method_form">
+            <form method="post">
                 {% csrf_token %}
                 <div id="crypto_method_wrapper">
                 {% if accepted_cryptos %}
