--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -251,7 +251,7 @@
             $("#input_date_end").show();
             $("#input_time_day").show();
             $('#input_record_date').hide();
-            $("#event_recurrent").show();
+            $("#event_recurrent").hide();
 
             $('#diamante_azul').hide();
             $('#diamante_amarillo').show();
@@ -265,7 +265,7 @@
             $("#input_date_end").hide();
             $("#input_time_day").show();
             $('#input_record_date').hide();
-            $("#event_recurrent").show();
+            $("#event_recurrent").hide();
 
             $('#diamante_azul').show();
             $('#diamante_amarillo').hide();
